--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "nodemon": "^3.1.7"
   }
 }
