--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "start:prod": "set NODE_ENV=production&& nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.7.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "vercel": "^37.11.0"
   }
