--- a/.envSample
+++ b/.envSample
@@ -6,3 +6,6 @@ GOOGLE_MAIL_PASSWORD=xxxxxxxxxx
 CLIENT_URL=xxxxxxxxxx
 TOKEN=xxxxxxxxxx
 SENDER_EMAIL=xxxxxxxxxx
+EMAIL_USER=xxxxxxxxxx
+EMAIL_APP_PASSWORD=xxxxxxxxxx
+FRONTEND_URL=xxxxxxxxxx
